#699 issue fix for the overflow of metadata and vertical scroll in the credit popup (reverted from commit 54e217b5604494a287db0a528c3268e16b35ca8a)

--- a/player/public/css/app/style.css
+++ b/player/public/css/app/style.css
@@ -584,11 +584,16 @@ ion-popover-view.fit ion-content {
 
 .credit-body-icon-font {
     width: 82%;
+    overflow-y:scroll;
+    overflow-x: hidden; 
+   word-wrap: break-word;
     height: 75%;
     left: 10%;
     position: absolute;
     font-family: NotoSansRegular;
     font-size: 0.7em;
+
+    
 }
 
 .credit-body-icon-font table{
